--- a/src/scu/bus/cpu/CMakeLists.txt
+++ b/src/scu/bus/cpu/CMakeLists.txt
@@ -1,12 +1,12 @@
 SET(scu_bus_cpu_SRC
-  cpu_ic_lvl_get.S
-  cpu_ic_lvl_set.S
-  cpu_ic_vct_get.S
-  cpu_ic_vct_set.S
+  cpu_intc_lvl_get.S
+  cpu_intc_lvl_set.S
+  cpu_intc_vct_get.S
+  cpu_intc_vct_set.S
   cpu_bc_bus_mode_get.S
 )
 
 SET(scu_bus_cpu_INSTALL_FILES
   cpu.h
-  cpu/ic.h
+  cpu/intc.h
 )
