--- a/libyaul/scu/bus/b/vdp2/CMakeLists.txt
+++ b/libyaul/scu/bus/b/vdp2/CMakeLists.txt
@@ -13,6 +13,8 @@ SET(scu_bus_b_vdp2_SRC
   vdp2_tvmd_vblank_out_wait.c
   vdp2_tvmd_hblank_in_wait.c
   vdp2_vram_cycle_pattern_set.c
+  vdp2_tvmd_vcount_get.c
+  vdp2_tvmd_hcount_get.c
 )
 
 SET(scu_bus_b_vdp2_INSTALL_FILES
