Add extra features

--- a/examples/monitor/Makefile
+++ b/examples/monitor/Makefile
@@ -2,8 +2,9 @@ PROJECT= monitor
 AS= sh-elf-as
 AFLAGS+= --fatal-warnings --isa=sh2 --big --reduce-memory-overheads
 CC= sh-elf-gcc
+NM= sh-elf-nm
 CFLAGS= -nostdlib -ansi -W -Wall -Werror -Wno-unused -m2 -mb -O2 -ffast-math -fomit-frame-pointer \
-	-I../../libyaul/ \
+	-I../../libyaul \
 	-I../../libyaul/common \
 	-I../../libyaul/scu \
 	-I../../libyaul/scu/bus/cpu \
@@ -13,8 +14,9 @@ CFLAGS= -nostdlib -ansi -W -Wall -Werror -Wno-unused -m2 -mb -O2 -ffast-math -fo
 LD= sh-elf-gcc
 LDFLAGS+= -Wl,-Map,${PROJECT}.map -nostartfiles  -L.
 OB= sh-elf-objcopy
+OD= sh-elf-objdump
 
-OBJECTS= ../../libyaul/common/crt0.o ../../libyaul/common/crt0-init.o monitor.o
+OBJECTS= ../../libyaul/common/crt0.o ../../libyaul/common/crt0-init.o lut.o monitor.o
 
 .SUFFIXES: .c .o
 
@@ -30,6 +32,8 @@ all: clean ${PROJECT}.elf
 ${PROJECT}.elf: ${OBJECTS}
 	${LD} ${LDFLAGS} -T ../../libyaul/common/ldscripts/shelf.x ${?} -o ${@} -L../../build/libyaul -lyaul
 	$(OB) -O binary ${@} ${PROJECT}.bin
+	$(NM) ${PROJECT}.elf > ${PROJECT}.sym 
+	$(OD) -S ${PROJECT}.elf > ${PROJECT}.asm
 
 clean:
 	-rm -f ${OBJECTS} ${PROJECT}.bin ${PROJECT}.elf ${PROJECT}.map
