Remove unnecessary VDP2 functions

--- a/libyaul/scu/bus/b/vdp2/CMakeLists.txt
+++ b/libyaul/scu/bus/b/vdp2/CMakeLists.txt
@@ -1,20 +1,20 @@
 SET(scu_bus_b_vdp2_SRC
   vdp2_init.c
   vdp2_scrn_bm_format_set.c
-  vdp2_scrn_ch_color_set.c
   vdp2_scrn_ch_format_set.c
   vdp2_scrn_display_set.c
-  vdp2_scrn_priority_set.c
+  vdp2_scrn_ls_set.c
+  vdp2_scrn_vcs_set.c
   vdp2_scrn_rp_mode_set.c
   vdp2_tvmd_blcs_set.c
-  vdp2_tvmd_display_set.c
   vdp2_tvmd_display_clear.c
+  vdp2_tvmd_display_set.c
+  vdp2_tvmd_hblank_in_wait.c
+  vdp2_tvmd_hcount_get.c
   vdp2_tvmd_vblank_in_wait.c
   vdp2_tvmd_vblank_out_wait.c
-  vdp2_tvmd_hblank_in_wait.c
-  vdp2_vram_cycle_pattern_set.c
   vdp2_tvmd_vcount_get.c
-  vdp2_tvmd_hcount_get.c
+  vdp2_vram_cycle_pattern_set.c
 )
 
 SET(scu_bus_b_vdp2_INSTALL_FILES
