Fix issue with detecting data configurations
There is still that issue where if you wiggle the controller, the
other port is affected. There has to be a way to detect this cleanly.

--- a/libyaul/scu/bus/cpu/smpc/CMakeLists.txt
+++ b/libyaul/scu/bus/cpu/smpc/CMakeLists.txt
@@ -15,6 +15,7 @@ SET(scu_bus_cpu_smpc_SRC
   smpc_smc_sshoff_call.c
   smpc_smc_sshon_call.c
   smpc_smc_sysres_call.c
+  smpc_peripheral_data.c
   smpc_peripheral_parse.c
   smpc_peripheral_system_manger.c
   smpc_init.c
