--- a/libyaul/cons/CMakeLists.txt
+++ b/libyaul/cons/CMakeLists.txt
@@ -1,10 +1,11 @@
 SET(monitor_SRC
+  cons.c
   font.c
-  monitor.c
   vt_parse/vt_parse.c
   vt_parse/vt_parse_table.c
 )
 
 SET(monitor_INSTALL_FILES
-  monitor.h
+  vdp1.h
+  vdp2.h
 )
