Fix cons to output simple text through the VDP2 driver

--- a/libyaul/cons/CMakeLists.txt
+++ b/libyaul/cons/CMakeLists.txt
@@ -1,11 +1,12 @@
-SET(monitor_SRC
+SET(cons_SRC
   cons.c
   font.c
+  vdp2.c
   vt_parse/vt_parse.c
   vt_parse/vt_parse_table.c
 )
 
-SET(monitor_INSTALL_FILES
-  vdp1.h
-  vdp2.h
+SET(cons_INSTALL_FILES
+  cons/vdp1.h
+  cons/vdp2.h
 )
