Add ability to patch before building the cross compiler

--- a/tools/build-scripts/sh-elf/scripts/build
+++ b/tools/build-scripts/sh-elf/scripts/build
@@ -9,15 +9,15 @@
 # Build and install Binutils
 mkdir -p "${BUILD_SRC_DIR}/binutils"
 cd "${BUILD_SRC_DIR}/binutils"
-if [ ! -f 'configured-binutils' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/configured-binutils" ]; then
     message "Configuring Binutils"
     (CFLAGS="${cflags}" LDFLAGS="${ldflags}" ../"${BINUTILS_SRC_DIR}"/configure \
-        --prefix="${PREFIX}" \
-        --target="${TARGET}" \
+        --disable-debug \
         --disable-nls \
         --disable-shared \
-        --disable-debug \
         --disable-threads \
+        --prefix="${PREFIX}" \
+        --target="${TARGET}" \
         --with-gcc \
         --with-gnu-as \
         --with-gnu-ld \
@@ -26,14 +26,14 @@ if [ ! -f 'configured-binutils' ]; then
     touch "${BUILD_SRC_DIR}/configured-binutils"
 fi
 
-if [ ! -f 'built-binutils' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/built-binutils" ]; then
     message "Building Binutils"
     ("${MAKE}") 1>> "../binutils.log" 2>&1 || \
         panic "Couldn't build Binutils, see '${BUILD_SRC_DIR}/binutils.log'" 1
     touch "${BUILD_SRC_DIR}/built-binutils"
 fi
 
-if [ ! -f 'installed-binutils' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/installed-binutils" ]; then
     message "Installing Binutils"
     ("${MAKE}" install) 1>> "../binutils.log" 2>&1 || \
         panic "Couldn't install Binutils, see '${BUILD_SRC_DIR}/binutils.log'" 1
@@ -45,32 +45,48 @@ cd "${OLDPWD}"
 # Build and install just the C compiler
 mkdir -p "${BUILD_SRC_DIR}/gcc"
 cd "${BUILD_SRC_DIR}/gcc"
-if [ ! -f 'configured-gcc' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/configured-gcc" ]; then
     message "Configuring GCC"
     (CFLAGS="${cflags}" LDFLAGS="${ldflags}" CFLAGS_FOR_TARGET="-O2" LDFLAGS_FOR_TARGET="" \
+        SUBTARGET_FRAME_POINTER_REQUIRED=1 \
         ../"${GCC_SRC_DIR}"/configure \
-        --with-newlib \
-        --enable-languages=c,c++ \
-        --disable-multilib \
-        --with-gcc --with-gnu-ld --with-gnu-as \
-        --disable-shared --disable-win32-registry --disable-nls \
-        --enable-static \
+        --disable-cld \
+        --disable-initfini-array \
+        --disable-largefile \
         --disable-libstdcxx-pch \
-        --target="${TARGET}" \
+        --disable-multilib \
+        --disable-multilib \
+        --disable-nls \
+        --disable-objc-gc \
+        --disable-rpath \
+        --disable-shared \
+        --disable-threads \
+        --disable-tls \
+        --disable-win32-registry \
+        --enable-decimal-float=no \
+        --enable-frame-pointer \
+        --enable-languages=c,c++ \
+        --enable-static \
+        --prefix="${PREFIX}" \
         --program-prefix="${TARGET}-" \
-        --prefix="${PREFIX}") 1>> "../gcc.log" 2>&1 \
+        --target="${TARGET}" \
+        --with-gcc \
+        --with-gnu-as \
+        --with-gnu-ld \
+        --without-dwarf2 \
+        --with-newlib) 1>> "../gcc.log" 2>&1 \
         || panic "Couldn't configure GCC, see '${BUILD_SRC_DIR}/gcc.log'" 1
     touch "${BUILD_SRC_DIR}/configured-gcc"
 fi
 
-if [ ! -f 'built-gcc' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/built-gcc" ]; then
     message "Building GCC"
     ("${MAKE}" all-gcc) 1>> "../gcc.log" 2>&1 \
         || panic "Couldn't build GCC, see '${BUILD_SRC_DIR}/gcc.log'" 1
     touch "${BUILD_SRC_DIR}/built-gcc"
 fi
 
-if [ ! -f 'installed-gcc' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/installed-gcc" ]; then
     message "Installing GCC"
     ("${MAKE}" install-gcc) 1>> "../gcc.log" 2>&1 \
         || panic "Couldn't install GCC, see '${BUILD_SRC_DIR}/gcc.log'" 1
@@ -83,11 +99,9 @@ cd "${OLDPWD}"
 # Build and install newlib
 mkdir -p "${BUILD_SRC_DIR}/newlib"
 cd "${BUILD_SRC_DIR}/newlib"
-if [ ! -f 'configured-newlib' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/configured-newlib" ]; then
     message "Configuring Newlib"
     (../"${NEWLIB_SRC_DIR}"/configure \
-        --target="${TARGET}" \
-        --prefix="${PREFIX}" \
         --disable-bootstrap \
         --disable-build-poststage1-with-cxx \
         --disable-build-with-cxx \
@@ -115,6 +129,8 @@ if [ ! -f 'configured-newlib' ]; then
         --enable-newlib-io-pos-args \
         --enable-newlib-reent-small \
         --enable-newlib-register-fini \
+        --prefix="${PREFIX}" \
+        --target="${TARGET}" \
         --without-cloog \
         --without-gmp \
         --without-mpc \
@@ -123,14 +139,14 @@ if [ ! -f 'configured-newlib' ]; then
         touch "${BUILD_SRC_DIR}/configured-newlib"
 fi
 
-if [ ! -f 'built-newlib' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/built-newlib" ]; then
     message "Building Newlib"
     ("${MAKE}") 1>> "../newlib.log" 2>&1 || \
         panic "Couldn't build Newlib, see '${BUILD_SRC_DIR}/newlib.log'" 1
     touch "${BUILD_SRC_DIR}/built-newlib"
 fi
 
-if [ ! -f 'installed-newlib' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/installed-newlib" ]; then
     message "Installing Newlib"
     ("${MAKE}" install) 1>> "../newlib.log" 2>&1 || \
         panic "Couldn't install Newlib, see '${BUILD_SRC_DIR}/newlib.log'" 1
@@ -141,14 +157,14 @@ cd "${OLDPWD}"
 
 # Build and install the final compiler
 cd "${BUILD_SRC_DIR}/gcc"
-if [ ! -f 'built-g++' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/built-g++" ]; then
     message "Building GCC"
     ("${MAKE}") 1>> "../gcc.log" 2>&1 || \
         panic "Couldn't build GCC, see '${BUILD_SRC_DIR}/gcc.log'" 1
     touch "${BUILD_SRC_DIR}/built-g++"
 fi
 
-if [ ! -f 'installed-g++' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/installed-g++" ]; then
     message "Installing GCC"
     ("${MAKE}" install) 1>> "../gcc.log" 2>&1 || \
         panic "Couldn't install GCC, see '${BUILD_SRC_DIR}/gcc.log'" 1
@@ -160,25 +176,25 @@ cd "${OLDPWD}"
 # Build and install GDB
 mkdir -p "${BUILD_SRC_DIR}/gdb"
 cd "${BUILD_SRC_DIR}/gdb"
-if [ ! -f 'configured-gdb' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/configured-gdb" ]; then
     message "Configuring GDB"
     (CFLAGS="${cflags}" LDFLAGS="${ldflags}" ../"${GDB_SRC_DIR}"/configure \
         --disable-nls \
+        --disable-werror \
         --prefix="${PREFIX}" \
-        --target="${TARGET}" \
-        --disable-werror) 1>> "../gdb.log" 2>&1 \
+        --target="${TARGET}") 1>> "../gdb.log" 2>&1 \
         || panic "Couldn't configure GDB, , see '${BUILD_SRC_DIR}/gdb.log'" 1
     touch "${BUILD_SRC_DIR}/configured-gdb"
 fi
 
-if [ ! -f 'built-gdb' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/built-gdb" ]; then
     message "Building GDB"
     ("${MAKE}") 1>> "../gdb.log" 2>&1 || \
         panic "Couldn't build GDB, see '${BUILD_SRC_DIR}/gdb.log'" 1
     touch "${BUILD_SRC_DIR}/built-gdb"
 fi
 
-if [ ! -f 'installed-gdb' ]; then
+if [ ! -f "${BUILD_SRC_DIR}/installed-gdb" ]; then
     message "Installing GDB"
     ("${MAKE}" install) 1>> "../gdb.log" 2>&1 || \
         panic "Couldn't install GDB, see '${BUILD_SRC_DIR}/gdb.log'" 1
