Add (broken) support for generating a stack backtrace

--- a/libyaul/common/CMakeLists.txt
+++ b/libyaul/common/CMakeLists.txt
@@ -2,9 +2,11 @@ SET(common_SRC
   assert.c
   exception_handler.c
   exception.S
+  stack.c
 )
 
 SET(common_INSTALL_FILES
   assert.h
   common.h
+  stack.h
 )
