--- a/tools/build-scripts/config.in
+++ b/tools/build-scripts/config.in
@@ -16,3 +16,8 @@ BUILD_INSTALL_DIR="${HOME}/libyaul"
 # ABSOLUTE path to previously downloaded source packages as well as
 # the location for temporary files
 BUILD_SRC_DIR="${HOME}/libyaul/tools/build-scripts/tmp"
+
+GCC_VERSION="4.5.3"
+BINUTILS_VERSION="2.22"
+GDB_VERSION="7.4"
+NEWLIB_VERSION="1.20"
