Fix issue with cd-block not building

--- a/libyaul/scu/bus/a/cs2/cd-block/CMakeLists.txt
+++ b/libyaul/scu/bus/a/cs2/cd-block/CMakeLists.txt
@@ -1,7 +1,7 @@
-SET(scu_bus_a_cd_block_SRC
-  cd_block_init.c
+SET(scu_bus_a_cs2_cd-block_SRC
+  cd-block_init.c
 )
 
-SET(scu_bus_a_cd_block_INSTALL_FILES
-  cd_block.h
+SET(scu_bus_a_cs2_cd-block_INSTALL_FILES
+  cd-block.h
 )
