Fix issue with dram-cartridge not building

--- a/libyaul/scu/bus/a/cs0/dram-cartridge/CMakeLists.txt
+++ b/libyaul/scu/bus/a/cs0/dram-cartridge/CMakeLists.txt
@@ -1,7 +1,7 @@
-SET(scu_bus_a_dram_SRC
-  dram_init.c
+SET(scu_bus_a_cs0_dram-cartridge_SRC
+  dram-cartridge_init.c
 )
 
-SET(scu_bus_a_dram_INSTALL_FILES
-  dram.h
+SET(scu_bus_a_cs0_dram-cartridge_INSTALL_FILES
+  dram-cartridge.h
 )
