Add IRQ FCFS multiplexer
Currently does not work very well due to needing dynamic memory
allocation (malloc())

--- a/libyaul/common/CMakeLists.txt
+++ b/libyaul/common/CMakeLists.txt
@@ -1,7 +1,8 @@
 SET(common_SRC
   assert.c
-  exception_handler.c
   exception.S
+  exception_handler.c
+  irq-mux.c
   stack.c
 )
 
@@ -9,4 +10,5 @@ SET(common_INSTALL_FILES
   assert.h
   common.h
   stack.h
+  irq-mux.h
 )
