Add a basic setter/getter for SMPC peripheral digital pads

--- a/libyaul/scu/bus/cpu/smpc/CMakeLists.txt
+++ b/libyaul/scu/bus/cpu/smpc/CMakeLists.txt
@@ -1,4 +1,9 @@
 SET(scu_bus_cpu_smpc_SRC
+  smpc_init.c
+  smpc_peripheral_data.c
+  smpc_peripheral_digital_port.c
+  smpc_peripheral_parse.c
+  smpc_peripheral_system_manger.c
   smpc_rtc_settime_call.c
   smpc_smc_cdoff_call.c
   smpc_smc_cdon_call.c
@@ -15,14 +20,11 @@ SET(scu_bus_cpu_smpc_SRC
   smpc_smc_sshoff_call.c
   smpc_smc_sshon_call.c
   smpc_smc_sysres_call.c
-  smpc_peripheral_data.c
-  smpc_peripheral_parse.c
-  smpc_peripheral_system_manger.c
-  smpc_init.c
 )
 
 SET(scu_bus_cpu_smpc_INSTALL_FILES
   smpc.h
+  smpc/peripheral.h
   smpc/rtc.h
   smpc/smc.h
 )
