Add support for communication with the PC COMMS-LINK
This should help get the GDB-stub started as well as waiting for the
new USB Cart which provides a better interface to communicate with the
client (PC)

--- a/libyaul/CMakeLists.txt
+++ b/libyaul/CMakeLists.txt
@@ -3,6 +3,7 @@ SET(SRC_DIRS
   cons
   tlsf
   scu
+  scu/bus/a/cs0/arp
   scu/bus/a/cs0/dram-cartridge
   scu/bus/a/cs2/cd-block
   scu/bus/b/scsp
@@ -21,6 +22,7 @@ SET(INCLUDE_DIRS
   common
   cons
   scu
+  scu/bus/a/cs0/arp
   scu/bus/a/cs0/dram-cartridge
   scu/bus/a/cs2/cd-block
   scu/bus/b/scsp
