--- a/libyaul/scu/bus/a/cs0/dram-cartridge/CMakeLists.txt
+++ b/libyaul/scu/bus/a/cs0/dram-cartridge/CMakeLists.txt
@@ -1,5 +1,6 @@
 SET(scu_bus_a_cs0_dram-cartridge_SRC
   dram-cartridge_init.c
+  dram-cartridge_area.c
 )
 
 SET(scu_bus_a_cs0_dram-cartridge_INSTALL_FILES
