Fix issue with returning the wrong DRAM cartridge lead address

--- a/libyaul/scu/bus/a/cs0/dram-cartridge/CMakeLists.txt
+++ b/libyaul/scu/bus/a/cs0/dram-cartridge/CMakeLists.txt
@@ -1,6 +1,7 @@
 SET(scu_bus_a_cs0_dram-cartridge_SRC
   dram-cartridge_init.c
   dram-cartridge_area.c
+  dram-cartridge_size.c
 )
 
 SET(scu_bus_a_cs0_dram-cartridge_INSTALL_FILES
