--- a/examples/nbg0-bitmap/Makefile
+++ b/examples/nbg0-bitmap/Makefile
@@ -13,12 +13,15 @@ OBJECTS+= image.o nbg0-bitmap.o
 	$(AS) $(AFLAGS) -o $(@) $(<)
 
 $(PROJECT).elf: $(OBJECTS)
-	$(LD) $(LDFLAGS) $(OBJECTS) \
-		-o $(@) -L../../build/libyaul -lyaul
+	$(LD) $(OBJECTS) $(LDFLAGS) -o $(@)
 	$(OB) -O binary $(@) $(PROJECT).bin
 	$(NM) $(PROJECT).elf > $(PROJECT).sym
 	$(OD) -S $(PROJECT).elf > $(PROJECT).asm
 
 clean:
 	-rm -f $(OBJECTS) \
-		$(PROJECT).asm $(PROJECT).bin $(PROJECT).elf $(PROJECT).map $(PROJECT).sym
+	$(PROJECT).asm \
+	$(PROJECT).bin \
+	$(PROJECT).elf \
+	$(PROJECT).map \
+	$(PROJECT).sym
