--- a/libyaul/scu/ic/CMakeLists.txt
+++ b/libyaul/scu/ic/CMakeLists.txt
@@ -1,9 +1,9 @@
 SET(scu_ic_SRC
-  scu_ic_lvl_set.S
-  scu_ic_msk_chg.S
-  scu_ic_msk_set.S
-  scu_ic_vct_get.S
-  scu_ic_vct_set.S
+  scu_ic_interrupt_get.S
+  scu_ic_interrupt_set.S
+  scu_ic_mask_chg.S
+  scu_ic_mask_get.S
+  scu_ic_mask_set.S
   scu_ic_status_get.c
 )
 
