--- a/tools/build-scripts/config.in
+++ b/tools/build-scripts/config.in
@@ -1,4 +1,4 @@
-# -*- mode: sh -*-
+#!/bin/sh
 
 # Copyright (c) 2012
 # See LICENSE for details.
@@ -21,3 +21,7 @@ GCC_VERSION="4.7.1"
 BINUTILS_VERSION="2.22"
 GDB_VERSION="7.4"
 NEWLIB_VERSION="1.20"
+
+# Tools for host
+MAKE="make"
+AWK="awk"
