--- a/tools/build-scripts/sh-elf/scripts/build
+++ b/tools/build-scripts/sh-elf/scripts/build
@@ -7,45 +7,45 @@
 # Israel Jacques <mrko@eecs.berkeley.edu>
 
 # Build and install Binutils
-mkdir -p "${BUILD_SRC_DIR}/binutils"
-cd "${BUILD_SRC_DIR}/binutils"
-if [ ! -f "${BUILD_SRC_DIR}/configured-binutils" ]; then
+mkdir -p "${BUILD_SRC_DIR}/${SH_TARGET}/binutils"
+cd "${BUILD_SRC_DIR}/${SH_TARGET}/binutils"
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/configured-binutils" ]; then
     message "Configuring Binutils"
     (CFLAGS="" LDFLAGS="" ../"${BINUTILS_SRC_DIR}"/configure \
         --disable-debug \
         --disable-nls \
         --disable-shared \
         --disable-threads \
-        --prefix="${PREFIX}" \
-        --target="${TARGET}" \
+        --prefix="${BUILD_INSTALL_DIR}/${SH_TARGET}" \
+        --target="${SH_TARGET}" \
         --with-gcc \
         --with-gnu-as \
         --with-gnu-ld \
-        --with-stabs) 1>> "../binutils.log" 2>&1 \
-        || panic "Couldn't configure Binutils, see '${BUILD_SRC_DIR}/binutils.log'" 1
-    touch "${BUILD_SRC_DIR}/configured-binutils"
+        --with-stabs) 1>> "${BUILD_SRC_DIR}/binutils-${SH_TARGET}.log" 2>&1 \
+        || panic "See '${BUILD_SRC_DIR}/binutils-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/configured-binutils"
 fi
 
-if [ ! -f "${BUILD_SRC_DIR}/built-binutils" ]; then
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/built-binutils" ]; then
     message "Building Binutils"
-    ("${MAKE}") 1>> "../binutils.log" 2>&1 || \
-        panic "Couldn't build Binutils, see '${BUILD_SRC_DIR}/binutils.log'" 1
-    touch "${BUILD_SRC_DIR}/built-binutils"
+    ("${MAKE}") 1>> "${BUILD_SRC_DIR}/binutils-${SH_TARGET}.log" 2>&1 || \
+        panic "See '${BUILD_SRC_DIR}/binutils-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/built-binutils"
 fi
 
-if [ ! -f "${BUILD_SRC_DIR}/installed-binutils" ]; then
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/installed-binutils" ]; then
     message "Installing Binutils"
-    ("${MAKE}" install) 1>> "../binutils.log" 2>&1 || \
-        panic "Couldn't install Binutils, see '${BUILD_SRC_DIR}/binutils.log'" 1
-    touch "${BUILD_SRC_DIR}/installed-binutils"
+    ("${MAKE}" install) 1>> "${BUILD_SRC_DIR}/binutils-${SH_TARGET}.log" 2>&1 || \
+        panic "See '${BUILD_SRC_DIR}/binutils-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/installed-binutils"
 fi
 cd "${OLDPWD}"
 
 
 # Build and install just the C compiler
-mkdir -p "${BUILD_SRC_DIR}/gcc"
-cd "${BUILD_SRC_DIR}/gcc"
-if [ ! -f "${BUILD_SRC_DIR}/configured-gcc" ]; then
+mkdir -p "${BUILD_SRC_DIR}/${SH_TARGET}/gcc"
+cd "${BUILD_SRC_DIR}/${SH_TARGET}/gcc"
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/configured-gcc" ]; then
     message "Configuring GCC"
     (CFLAGS="" \
         LDFLAGS="" \
@@ -70,39 +70,39 @@ if [ ! -f "${BUILD_SRC_DIR}/configured-gcc" ]; then
         --enable-frame-pointer \
         --enable-languages=c,c++ \
         --enable-static \
-        --prefix="${PREFIX}" \
-        --program-prefix="${TARGET}-" \
-        --target="${TARGET}" \
+        --prefix="${BUILD_INSTALL_DIR}/${SH_TARGET}" \
+        --program-prefix="${SH_TARGET}-" \
+        --target="${SH_TARGET}" \
         --with-gcc \
         --with-gnu-as \
         --with-gnu-ld \
         --without-dwarf2 \
-        --with-newlib) 1>> "../gcc.log" 2>&1 \
-        || panic "Couldn't configure GCC, see '${BUILD_SRC_DIR}/gcc.log'" 1
-    touch "${BUILD_SRC_DIR}/configured-gcc"
+        --with-newlib) 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 \
+        || panic "See '${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/configured-gcc"
 fi
 
-if [ ! -f "${BUILD_SRC_DIR}/built-gcc" ]; then
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/built-gcc" ]; then
     message "Building GCC"
-    ("${MAKE}" all-gcc) 1>> "../gcc.log" 2>&1 \
-        || panic "Couldn't build GCC, see '${BUILD_SRC_DIR}/gcc.log'" 1
-    touch "${BUILD_SRC_DIR}/built-gcc"
+    ("${MAKE}" all-gcc) 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 \
+        || panic "See '${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/built-gcc"
 fi
 
-if [ ! -f "${BUILD_SRC_DIR}/installed-gcc" ]; then
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/installed-gcc" ]; then
     message "Installing GCC"
-    ("${MAKE}" install-gcc) 1>> "../gcc.log" 2>&1 \
-        || panic "Couldn't install GCC, see '${BUILD_SRC_DIR}/gcc.log'" 1
-    touch "${BUILD_SRC_DIR}/installed-gcc"
+    ("${MAKE}" install-gcc) 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 \
+        || panic "See '${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/installed-gcc"
 fi
 unset "CFLAGS"
 cd "${OLDPWD}"
 
 
 # Build and install newlib
-mkdir -p "${BUILD_SRC_DIR}/newlib"
-cd "${BUILD_SRC_DIR}/newlib"
-if [ ! -f "${BUILD_SRC_DIR}/configured-newlib" ]; then
+mkdir -p "${BUILD_SRC_DIR}/${SH_TARGET}/newlib"
+cd "${BUILD_SRC_DIR}/${SH_TARGET}/newlib"
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/configured-newlib" ]; then
     message "Configuring Newlib"
     (CFLAGS="-O2 -fno-omit-frame-pointer" \
         ../"${NEWLIB_SRC_DIR}"/configure \
@@ -133,76 +133,77 @@ if [ ! -f "${BUILD_SRC_DIR}/configured-newlib" ]; then
         --enable-newlib-io-c99-formats \
         --enable-newlib-io-pos-args \
         --enable-newlib-reent-small \
-        --prefix="${PREFIX}" \
-        --target="${TARGET}" \
+        --prefix="${BUILD_INSTALL_DIR}/${SH_TARGET}" \
+        --target="${SH_TARGET}" \
         --without-cloog \
         --without-gmp \
         --without-mpc \
-        --without-mpfr) 1>> "../newlib.log" 2>&1 \
-        || panic "Couldn't configure Newlib, see '${BUILD_SRC_DIR}/newlib.log'" 1
-        touch "${BUILD_SRC_DIR}/configured-newlib"
+        --without-mpfr) 1>> "${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log" 2>&1 \
+        || panic "See '${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log'" 1
+        touch "${BUILD_SRC_DIR}/${SH_TARGET}/configured-newlib"
 fi
 
-if [ ! -f "${BUILD_SRC_DIR}/built-newlib" ]; then
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/built-newlib" ]; then
     message "Building Newlib"
-    ("${MAKE}") 1>> "../newlib.log" 2>&1 || \
-        panic "Couldn't build Newlib, see '${BUILD_SRC_DIR}/newlib.log'" 1
-    touch "${BUILD_SRC_DIR}/built-newlib"
+    ("${MAKE}") 1>> "${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log" 2>&1 || \
+        panic "See '${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/built-newlib"
 fi
 
-if [ ! -f "${BUILD_SRC_DIR}/installed-newlib" ]; then
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/installed-newlib" ]; then
     message "Installing Newlib"
-    ("${MAKE}" install) 1>> "../newlib.log" 2>&1 || \
-        panic "Couldn't install Newlib, see '${BUILD_SRC_DIR}/newlib.log'" 1
-    touch "${BUILD_SRC_DIR}/installed-newlib"
+    ("${MAKE}" install) 1>> "${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log" 2>&1 || \
+        panic "See '${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/installed-newlib"
 fi
 cd "${OLDPWD}"
 
 
 # Build and install the final compiler
-cd "${BUILD_SRC_DIR}/gcc"
-if [ ! -f "${BUILD_SRC_DIR}/built-g++" ]; then
+cd "${BUILD_SRC_DIR}/${SH_TARGET}/gcc"
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/built-g++" ]; then
     message "Building GCC"
-    ("${MAKE}") 1>> "../gcc.log" 2>&1 || \
-        panic "Couldn't build GCC, see '${BUILD_SRC_DIR}/gcc.log'" 1
-    touch "${BUILD_SRC_DIR}/built-g++"
+    ("${MAKE}") 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 || \
+        panic "See '${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/built-g++"
 fi
 
-if [ ! -f "${BUILD_SRC_DIR}/installed-g++" ]; then
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/installed-g++" ]; then
     message "Installing GCC"
-    ("${MAKE}" install) 1>> "../gcc.log" 2>&1 || \
-        panic "Couldn't install GCC, see '${BUILD_SRC_DIR}/gcc.log'" 1
-    touch "${BUILD_SRC_DIR}/installed-g++"
+    ("${MAKE}" install) 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 || \
+        panic "See '${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/installed-g++"
 fi
 cd "${OLDPWD}"
 
 
 # Build and install GDB
-mkdir -p "${BUILD_SRC_DIR}/gdb"
-cd "${BUILD_SRC_DIR}/gdb"
-if [ ! -f "${BUILD_SRC_DIR}/configured-gdb" ]; then
+mkdir -p "${BUILD_SRC_DIR}/${SH_TARGET}/gdb"
+cd "${BUILD_SRC_DIR}/${SH_TARGET}/gdb"
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/configured-gdb" ]; then
     message "Configuring GDB"
     (CFLAGS="" \
         LDFLAGS="" \
         ../"${GDB_SRC_DIR}"/configure \
         --disable-nls \
         --disable-werror \
-        --prefix="${PREFIX}" \
-        --target="${TARGET}") 1>> "../gdb.log" 2>&1 \
-        || panic "Couldn't configure GDB, , see '${BUILD_SRC_DIR}/gdb.log'" 1
-    touch "${BUILD_SRC_DIR}/configured-gdb"
+        --prefix="${BUILD_INSTALL_DIR}/${SH_TARGET}" \
+        --target="${SH_TARGET}") 1>> "${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log" 2>&1 \
+        || panic "See '${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/configured-gdb"
 fi
 
-if [ ! -f "${BUILD_SRC_DIR}/built-gdb" ]; then
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/built-gdb" ]; then
     message "Building GDB"
-    ("${MAKE}") 1>> "../gdb.log" 2>&1 || \
-        panic "Couldn't build GDB, see '${BUILD_SRC_DIR}/gdb.log'" 1
-    touch "${BUILD_SRC_DIR}/built-gdb"
+    ("${MAKE}") 1>> "${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log" 2>&1 || \
+        panic "See '${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/built-gdb"
 fi
 
-if [ ! -f "${BUILD_SRC_DIR}/installed-gdb" ]; then
+if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/installed-gdb" ]; then
     message "Installing GDB"
-    ("${MAKE}" install) 1>> "../gdb.log" 2>&1 || \
-        panic "Couldn't install GDB, see '${BUILD_SRC_DIR}/gdb.log'" 1
-    touch "${BUILD_SRC_DIR}/installed-gdb"
+    ("${MAKE}" install) 1>> "${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log" 2>&1 || \
+        panic "See '${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log'" 1
+    touch "${BUILD_SRC_DIR}/${SH_TARGET}/installed-gdb"
 fi
+cd "${OLDPWD}"
