Add CPU DMAC support (untested)

--- a/libyaul/scu/bus/cpu/CMakeLists.txt
+++ b/libyaul/scu/bus/cpu/CMakeLists.txt
@@ -7,6 +7,8 @@ SET(scu_bus_cpu_SRC
   cpu_intc_mask_set.S
   cpu_intc_vector_base_get.S
   cpu_intc_vector_base_set.S
+  cpu_dmac_channel_set.c
+  cpu_dmac_channel_start.c
 )
 
 SET(scu_bus_cpu_INSTALL_FILES
