Fix issue with DMAC interrupt not being generated

--- a/libyaul/scu/bus/cpu/CMakeLists.txt
+++ b/libyaul/scu/bus/cpu/CMakeLists.txt
@@ -1,4 +1,7 @@
 SET(scu_bus_cpu_SRC
+  cpu_dmac_channel_set.c
+  cpu_dmac_channel_start.c
+  cpu_dmac_channel_stop.c
   cpu_intc_disable.S
   cpu_intc_enable.S
   cpu_intc_interrupt_get.S
@@ -7,8 +10,6 @@ SET(scu_bus_cpu_SRC
   cpu_intc_mask_set.S
   cpu_intc_vector_base_get.S
   cpu_intc_vector_base_set.S
-  cpu_dmac_channel_set.c
-  cpu_dmac_channel_start.c
 )
 
 SET(scu_bus_cpu_INSTALL_FILES
