--- a/libyaul/scu/bus/a/cs0/dram-cartridge/CMakeLists.txt
+++ b/libyaul/scu/bus/a/cs0/dram-cartridge/CMakeLists.txt
@@ -2,6 +2,7 @@ SET(scu_bus_a_cs0_dram-cartridge_SRC
   dram-cartridge_init.c
   dram-cartridge_area.c
   dram-cartridge_size.c
+  dram-cartridge_id.c
 )
 
 SET(scu_bus_a_cs0_dram-cartridge_INSTALL_FILES
