--- a/libyaul/scu/bus/b/vdp2/CMakeLists.txt
+++ b/libyaul/scu/bus/b/vdp2/CMakeLists.txt
@@ -4,6 +4,7 @@ SET(scu_bus_b_vdp2_SRC
   vdp2_scrn_bm_format_set.c
   vdp2_scrn_ccc_set.c
   vdp2_scrn_ch_format_set.c
+  vdp2_scrn_display_clear.c
   vdp2_scrn_display_set.c
   vdp2_scrn_ls_set.c
   vdp2_scrn_mosaic_set.c
