--- a/libyaul/scu/bus/b/vdp2/CMakeLists.txt
+++ b/libyaul/scu/bus/b/vdp2/CMakeLists.txt
@@ -15,6 +15,7 @@ SET(scu_bus_b_vdp2_SRC
   vdp2_tvmd_blcs_set.c
   vdp2_tvmd_display_clear.c
   vdp2_tvmd_display_set.c
+  vdp2_tvmd_hblank_in_irq_get.c
   vdp2_tvmd_hblank_in_wait.c
   vdp2_tvmd_hcount_get.c
   vdp2_tvmd_vblank_in_irq_get.c
