--- a/libyaul/scu/bus/cpu/smpc/CMakeLists.txt
+++ b/libyaul/scu/bus/cpu/smpc/CMakeLists.txt
@@ -1,14 +1,12 @@
 SET(scu_bus_cpu_smpc_SRC
   smpc_init.c
   smpc_peripheral_analog_port.c
-  smpc_peripheral_data.c
   smpc_peripheral_digital_port.c
+  smpc_peripheral_init.c
   smpc_peripheral_keyboard_port.c
   smpc_peripheral_mouse_port.c
-  smpc_peripheral_parse.c
   smpc_peripheral_racing_port.c
   smpc_peripheral_raw_port.c
-  smpc_peripheral_system_manger.c
   smpc_rtc_settime_call.c
   smpc_smc_call.c
   smpc_smc_cdoff_call.c
