Allow to populate digital peripheral interface
This was done by refactoring smpc_peripheral_digital_port() into
another function: smpc_peripheral_digital_get().

--- a/libyaul/scu/bus/cpu/smpc/CMakeLists.txt
+++ b/libyaul/scu/bus/cpu/smpc/CMakeLists.txt
@@ -2,6 +2,7 @@ SET(scu_bus_cpu_smpc_SRC
   smpc_init.c
   smpc_peripheral_analog_port.c
   smpc_peripheral_digital_port.c
+  smpc_peripheral_digital_get.c
   smpc_peripheral_init.c
   smpc_peripheral_keyboard_port.c
   smpc_peripheral_mouse_port.c
