Force certain VDP2 routines to be inlined
This should speed things up a tiny bit. I haven't done any tests to
prove it, but at the very least it'll decrease the number of jumps.

It also exposes the ability to write directly to memory-mapped
registers from any component if the need ever arises.

--- a/libyaul/scu/CMakeLists.txt
+++ b/libyaul/scu/CMakeLists.txt
@@ -17,9 +17,10 @@ SET(scu_SRC
 )
 
 SET(scu_INSTALL_FILES
-  scu/ic.h
+  scu.h
   scu/dma.h
   scu/dsp.h
+  scu/ic.h
+  scu/map.h
   scu/timer.h
-  scu.h
 )
