Refactor routine to set the VDP2 CCC

--- a/libyaul/scu/bus/b/vdp2/CMakeLists.txt
+++ b/libyaul/scu/bus/b/vdp2/CMakeLists.txt
@@ -1,8 +1,8 @@
 SET(scu_bus_b_vdp2_SRC
+  vdp2-internal.c
   vdp2_init.c
   vdp2_priority_spn_set.c
   vdp2_scrn_bm_format_set.c
-  vdp2_scrn_ccc_set.c
   vdp2_scrn_ch_format_set.c
   vdp2_scrn_display_clear.c
   vdp2_scrn_display_set.c
