--- a/libyaul/cons/CMakeLists.txt
+++ b/libyaul/cons/CMakeLists.txt
@@ -1,8 +1,8 @@
 SET(cons_SRC
   cons.c
+  drivers/vdp1.c
+  drivers/vdp2.c
   font.c
-  vdp1.c
-  vdp2.c
   vt_parse/vt_parse.c
   vt_parse/vt_parse_table.c
 )
