--- a/libyaul/scu/bus/b/vdp2/CMakeLists.txt
+++ b/libyaul/scu/bus/b/vdp2/CMakeLists.txt
@@ -3,8 +3,8 @@ SET(scu_bus_b_vdp2_SRC
   vdp2_init.c
   vdp2_priority_spn_set.c
   vdp2_scrn_back_screen_set.c
-  vdp2_scrn_bm_format_set.c
-  vdp2_scrn_ch_format_set.c
+  vdp2_scrn_bitmap_format_set.c
+  vdp2_scrn_cell_format_set.c
   vdp2_scrn_display_clear.c
   vdp2_scrn_display_set.c
   vdp2_scrn_display_unset.c
