--- a/libyaul/CMakeLists.txt
+++ b/libyaul/CMakeLists.txt
@@ -10,6 +10,7 @@ SET(SRC_DIRS
   kernel/vfs/fs/romdisk
   newlib
   scu
+  scu/bus/a/cs0/arp
   scu/bus/a/cs0/dram-cartridge
   scu/bus/a/cs0/usb-cartridge
   scu/bus/a/cs2/cd-block
@@ -27,6 +28,7 @@ SET(INCLUDE_DIRS
   cons
   kernel
   scu
+  scu/bus/a/cs0/arp
   scu/bus/a/cs0/dram-cartridge
   scu/bus/a/cs0/usb-cartridge
   scu/bus/a/cs2/cd-block
