Improve performance on 3D test
Going from bubble sort to bucket sort really helped
things. It would be ideal to avoid clumping a large set polygons
of polygons into a single bucket as it slows down insertion sort.

--- a/examples/vdp1/Makefile
+++ b/examples/vdp1/Makefile
@@ -5,6 +5,7 @@ OBJECTS+= root.o \
 	test.o \
 	tests/common.o \
 	tests/state_machine.o \
+	tests/matrix_stack.o \
 	tests/00.o \
 	tests/01.o \
 	tests/02.o \
