--- a/tools/build-scripts/sh-elf/scripts/build
+++ b/tools/build-scripts/sh-elf/scripts/build
@@ -28,14 +28,14 @@ fi
 
 if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/built-binutils" ]; then
     message "Building Binutils"
-    "${MAKE}" 1>> "${BUILD_SRC_DIR}/binutils-${SH_TARGET}.log" 2>&1 || \
+    "${MAKE}" -j ${BUILD_MAKE_JOBS} 1>> "${BUILD_SRC_DIR}/binutils-${SH_TARGET}.log" 2>&1 || \
         panic "See '${BUILD_SRC_DIR}/binutils-${SH_TARGET}.log'" 1
     touch "${BUILD_SRC_DIR}/${SH_TARGET}/built-binutils"
 fi
 
 if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/installed-binutils" ]; then
     message "Installing Binutils"
-    "${MAKE}" install 1>> "${BUILD_SRC_DIR}/binutils-${SH_TARGET}.log" 2>&1 || \
+    "${MAKE}" -j ${BUILD_MAKE_JOBS} install 1>> "${BUILD_SRC_DIR}/binutils-${SH_TARGET}.log" 2>&1 || \
         panic "See '${BUILD_SRC_DIR}/binutils-${SH_TARGET}.log'" 1
     touch "${BUILD_SRC_DIR}/${SH_TARGET}/installed-binutils"
 fi
@@ -90,14 +90,14 @@ fi
 
 if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/built-gcc" ]; then
     message "Building GCC"
-    "${MAKE}" all-gcc 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 \
+    "${MAKE}" -j ${BUILD_MAKE_JOBS} all-gcc 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 \
         || panic "See '${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log'" 1
     touch "${BUILD_SRC_DIR}/${SH_TARGET}/built-gcc"
 fi
 
 if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/installed-gcc" ]; then
     message "Installing GCC"
-    "${MAKE}" install-gcc 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 \
+    "${MAKE}" -j ${BUILD_MAKE_JOBS} install-gcc 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 \
         || panic "See '${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log'" 1
     touch "${BUILD_SRC_DIR}/${SH_TARGET}/installed-gcc"
 fi
@@ -135,7 +135,6 @@ if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/configured-newlib" ]; then
         --disable-newlib-register-fini \
         --disable-newlib-supplied-syscalls \
         --disable-objc-gc \
-        --enable-lto \
         --enable-newlib-io-c99-formats \
         --enable-newlib-io-pos-args \
         --enable-newlib-reent-small \
@@ -153,14 +152,14 @@ fi
 
 if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/built-newlib" ]; then
     message "Building Newlib"
-    "${MAKE}" 1>> "${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log" 2>&1 || \
+    "${MAKE}" -j ${BUILD_MAKE_JOBS} 1>> "${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log" 2>&1 || \
         panic "See '${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log'" 1
     touch "${BUILD_SRC_DIR}/${SH_TARGET}/built-newlib"
 fi
 
 if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/installed-newlib" ]; then
     message "Installing Newlib"
-    "${MAKE}" install 1>> "${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log" 2>&1 || \
+    "${MAKE}" -j ${BUILD_MAKE_JOBS} install 1>> "${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log" 2>&1 || \
         panic "See '${BUILD_SRC_DIR}/newlib-${SH_TARGET}.log'" 1
     touch "${BUILD_SRC_DIR}/${SH_TARGET}/installed-newlib"
 fi
@@ -171,14 +170,14 @@ cd "${OLDPWD}"
 cd "${BUILD_SRC_DIR}/${SH_TARGET}/gcc"
 if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/built-g++" ]; then
     message "Building GCC"
-    "${MAKE}" 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 || \
+    "${MAKE}" -j ${BUILD_MAKE_JOBS} 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 || \
         panic "See '${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log'" 1
     touch "${BUILD_SRC_DIR}/${SH_TARGET}/built-g++"
 fi
 
 if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/installed-g++" ]; then
     message "Installing GCC"
-    ("${MAKE}" install) 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 || \
+    ("${MAKE}" -j ${BUILD_MAKE_JOBS} install) 1>> "${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log" 2>&1 || \
         panic "See '${BUILD_SRC_DIR}/gcc-${SH_TARGET}.log'" 1
     touch "${BUILD_SRC_DIR}/${SH_TARGET}/installed-g++"
 fi
@@ -202,14 +201,14 @@ if [[ "${OPTION_ENABLE_GDB}" == "yes" ]]; then
 
     if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/built-gdb" ]; then
         message "Building GDB"
-        "${MAKE}" 1>> "${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log" 2>&1 || \
+        "${MAKE}" -j ${BUILD_MAKE_JOBS} 1>> "${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log" 2>&1 || \
             panic "See '${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log'" 1
         touch "${BUILD_SRC_DIR}/${SH_TARGET}/built-gdb"
     fi
 
     if [ ! -f "${BUILD_SRC_DIR}/${SH_TARGET}/installed-gdb" ]; then
         message "Installing GDB"
-        "${MAKE}" install 1>> "${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log" 2>&1 || \
+        "${MAKE}" -j ${BUILD_MAKE_JOBS} install 1>> "${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log" 2>&1 || \
             panic "See '${BUILD_SRC_DIR}/gdb-${SH_TARGET}.log'" 1
         touch "${BUILD_SRC_DIR}/${SH_TARGET}/installed-gdb"
     fi
