Add ability to apply forces to rigid bodies
It's using the simplest form of integration: The Euler-method.

--- a/examples/game-dark-blue/Makefile
+++ b/examples/game-dark-blue/Makefile
@@ -5,11 +5,13 @@ OBJECTS+= \
 	root.romdisk.o \
 	camera.o \
 	cmd_groups.o \
+	collider.o \
 	dark-blue.o \
 	fs.o \
 	globals.o \
 	physics.o \
 	player.o \
+	rigid_body.o \
 	state.o \
 	state_game.o \
 	state_machine.o \
